feat: add musician ads system, media summary, and extended group/profile tools
- Implemented full Musician Ads system (creation, editing, filtering, detailed and summary views)
- Created new Ads section accessible via navigation menu and user profiles
- Added Media Summary preview component with "See more" link to full media section
- Renamed MusicSection to MediaSection and restructured media handling
- Enhanced profile and group components with support for displaying ads and media
- Added group editing capabilities and improved member role assignment (admin, manager, custom roles)
- Updated profile and group display components with visual improvements
- Improved support for mobile responsiveness and UI consistency
- Updated i18n files for ads, music, profile, and UI (EN & ES)
- Refactored folder structure for group components
- Added reusable Textarea UI component
- Updated README.md to reflect current feature set

--- a/src/locales/en/music.json
+++ b/src/locales/en/music.json
@@ -80,7 +80,8 @@
     },
     "actions": {
       "edit": "Edit",
-      "delete": "Delete"
+      "delete": "Delete",
+      "seeMore": "See more"
     }
   },
   "errors": {
