--- a/src/locales/es/music.json
+++ b/src/locales/es/music.json
@@ -81,7 +81,8 @@
     },
     "actions": {
       "edit": "Editar",
-      "delete": "Eliminar"
+      "delete": "Eliminar",
+      "seeMore": "Ver más"
     }
   },
 
