--- a/src/locales/es/posts.json
+++ b/src/locales/es/posts.json
@@ -27,7 +27,8 @@
     },
     "buttons": {
       "post": "Publicar",
-      "posting": "Publicando..."
+      "posting": "Publicando...",
+      "cancel": "Cancelar"
     },
     "errors": {
       "title": "El título es obligatorio.",
