--- a/src/locales/en/profileGroup.json
+++ b/src/locales/en/profileGroup.json
@@ -6,42 +6,158 @@
     "notInAnyGroups": "You are not part of any groups yet.",
     "userNotInAnyGroups": "This user is not part of any groups yet."
   },
-  "groupMembersList": {
-    "members": "Members",
-    "admins": "Admins",
-    "addMember": "Add Member",
-    "removeMember": "Remove Member",
-    "makeAdmin": "Make Admin",
-    "removeAdmin": "Remove Admin",
-    "noMembers": "No members in this group yet."
+
+  "manageMembers": {
+    "labels": {
+      "role": "Role",
+      "admin": "Admin",
+      "member": "Member",
+      "musician": "Musician",
+      "manager": "Manager"
+    },
+    "validations": {
+      "role": "Role is required"
+    },
+    "buttons": {
+      "save": "Save",
+      "cancel": "Cancel",
+      "leaveGroup": "Leave Group",
+      "removeMember": "Remove Member"      
+    }
   },
+
+  "groupMembersList": {
+    "confirmDialog": {
+      "titles": {
+        "deleteGroup": "Delete Group",
+        "leaveGroup": "Leave Group",
+        "removeMember": "Remove Member"
+      },
+      "labels": {
+        "leaveGroup": "Leave Group",
+        "removeMember": "Remove Member",
+        "cancel": "Cancel"
+      },
+      "messages": {
+        "confirmDelete": "Are you sure you want to delete this group? This action cannot be undone.",
+        "confirmLeave": "Are you sure you want to leave this group?",
+        "confirmRemove": "Are you sure you want to remove this member from the group?"
+      },
+      "buttons": {
+        "save": "Save"
+      }
+    },
+    "role": {
+      "admin": "Admin",
+      "member": "Member",
+      "musician": "Musician",
+      "manager": "Manager"
+    },
+    "messages": {
+      "noMembers": "No members in this group yet.",
+      "members": "Members"
+    },
+    "buttons": {
+      "manage": "Manage",
+      "leave": "Leave Group"
+    }
+  },
+
+  "groupMembers": {
+    "title": "Group Members",
+    "labels": {
+      "username": "Username",
+      "role": "Role",
+      "member": "Member",
+      "admin": "Admin",
+      "musician": "Musician",
+      "manager": "Manager",
+      "bandRole": "Band Role"
+    },
+    "placeholders": {
+      "username": "Enter username",
+      "bandRole": "Enter band role (up to 3 roles)"
+    },
+    "validations": {
+      "username": "Username is required"
+    },
+    "buttons": {
+      "cancel": "Cancel",
+      "adding": "Adding...",
+      "add": "Add",
+      "addMember": "Add Member",
+      "addRole": "Add Role"
+    },
+    "errors": {
+      "notFound": "User not found"
+    }
+  },
+
   "groupItem": {
     "groupName": "Group Name",
     "groupDescription": "Group Description",
     "viewGroup": "View Group"
   },
-  "createProfileGroup": {
-    "editGroup": "Edit Group",
-    "leaveGroup": "Leave Group",
-    "deleteGroup": "Delete Group",
-    "confirmDelete": "Are you sure you want to delete this group? This action cannot be undone.",
-    "confirmLeave": "Are you sure you want to leave this group?",
-    "confirmRemove": "Are you sure you want to remove this member from the group?",
-    "role": "Role",
-    "admin": "Admin",
-    "member": "Member",
-    "musician": "Musician",
-    "manager": "Manager",
-    "save": "Save",
-    "cancel": "Cancel",
-    "add": "Add",
-    "adding": "Adding...",
-    "groupMembers": "Group Members",
-    "profileIdLabel": "Profile ID",
-    "profileIdPlaceholder": "Enter profile ID",
-    "usernameLabel": "Username",
-    "usernamePlaceholder": "Enter username",
-    "errorLoadingGroupData": "Error loading group data.",
-    "noGroupData": "No group data available."
+
+  "createProfileGroup": {    
+    "title": "Create a Profile Group",
+    "labels": {
+      "name": "Group Name",
+      "bio": "Bio",
+      "country": "Country",
+      "city": "City",
+      "genre": "Genre"
+    },
+    "placeholders": {
+      "name": "Enter group name",
+      "bio": "Enter a short bio",
+      "country": "Enter country",
+      "city": "Enter city",
+      "genre": "Enter genre"
+    },
+    "validations": {
+      "name": "Group name is required"
+    },
+    "errors": {
+      "create": "Failed to create the group"
+    },
+    "buttons": {
+      "create": "Create Group",
+      "creating": "Creating...",
+      "cancel": "Cancel"
+    }
+  },
+
+  "editProfileGroup": {
+    "title": "Edit Group",
+    "labels": {
+      "bio": "Group Bio",
+      "country": "Country",
+      "city": "City",
+      "genre": "Genre",
+      "name": "Name"
+    },
+    "placeholders": {
+      "bio": "Bio",
+      "country": "Country",
+      "city": "City",
+      "genre": "Genre",
+      "name": "Name"
+    },
+    "validations": {
+      "name": "Name is required"
+    },
+    "buttons": {
+      "saving": "Saving...",
+      "save": "Save"
+    },
+    "errors": {
+      "loading": "Error loading group data"
+    }
+  },
+
+  "errors": {
+    "loading": "Error loading group data.",
+    "noData": "No group data available."
   }
 }
