--- a/src/locales/es/profile.json
+++ b/src/locales/es/profile.json
@@ -4,6 +4,7 @@
       "errorLoading": "Error al cargar el perfil.",
       "userGroupsComing": "Los Grupos de Usuarios están en desarrollo. ¡Próximamente!",
       "musicComing": "La sección de Música está en desarrollo. ¡Próximamente!",
+      "noNotifications": "No hay notificaciones",
       "navigation": {
         "about": "Acerca de",
         "ads": "Anuncios",
@@ -16,6 +17,10 @@
           "notifications": "Notificaciones",
           "settings": "Configuraciones"
         },
+        "internNav": {
+        "notifications": "Notificaciones",
+        "pending": "Conexiones Pendientes"
+      },
       "data": {
         "firstname": "Nombre",
         "lastname": "Apellido",
